# toucan_spirit

./: README.md  pubspec.yaml
android/app/src/main/: AndroidManifest.xml
backend/: Cargo.toml  readme.md
backend/migrations/: 20230312180021_init.sql  20230618023504_ingredients.sql  20230623013650_recipes.sql
backend/src/: main.rs  pg.rs
backend/src/ingredients/: ingredient.rs  mod.rs
backend/src/recipes/: mod.rs  recipe.rs  recipe_ingredient.rs
backend/src/shared/: pagination.rs
frontend/: pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/linux/: CMakeLists.txt
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/web/: index.html
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
frontends/android/app/: build.gradle
frontends/ios/Runner/: Info.plist
frontends/ios/Runner.xcodeproj/: project.pbxproj
frontends/linux/: CMakeLists.txt
frontends/macos/Runner/Configs/: AppInfo.xcconfig
frontends/web/: index.html
frontends/windows/runner/: main.cpp
linux/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
test/: widget_test.dart
web/: manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc
(+2 files in other folders)
