[package]
name = "toucan_spirit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.10", features=["default", "macros"]}
serde = "1.0.155"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "postgres"] }
tower = "0.4.13"
