[package]
name = "toucan_spirit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.19", features=["default", "macros"]}
serde = "1.0.177"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-native-tls", "postgres"] }
tower = "0.4.13"
utoipa = { version = "3.4.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.1.4", features = ["axum"] }